update detail, copy, upccopy

--- a/app/views/header.htm
+++ b/app/views/header.htm
@@ -5,6 +5,7 @@
         <title>{{ @site }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../ui/css/bootstrap.css">
         <link rel="stylesheet" href="../../ui/css/bootstrap-table.css">
         <link href="../../ui/css/upc.css" rel="stylesheet" media="screen">        
     </head>
