--- a/app/views/item/copy.htm
+++ b/app/views/item/copy.htm
@@ -1,13 +1,8 @@
-<form id="create-form" action="{{ @BASE.'/item/create' }}" method="post"  class="form-horizontal">
+<form id="copy-form"  action="{{ @BASE.'/item/copy' }}" method="post"  class="form-horizontal">
   <div class="form-group">
     <label class="control-label col-sm-2" for="brand_code">Brand:</label>
-    <div class="col-sm-10"> 
-      <select class="form-control" id="brand" name="brand">
-        <!-- <option value="" disabled="disabled">-Choose-</option> -->
-        <repeat group="{{ @brands }}" value="{{ @brand }}">
-             <option value="{{ @brand.id }},{{ @brand.code }},{{ @brand.prefix }},{{ @brand.new_number }}" <check if="{{ @brand.new_number == @brand.last_number }}">disabled="disabled"</check>>{{ @brand.name }}</option>
-        </repeat>        
-      </select>      
+    <div class="col-sm-10">       
+      <input type="text" class="form-control" id="brand_name" name="brand_name" value="{{@item.brand_name}}" readonly="readonly">
     </div>
   </div>
   <div class="form-group">
@@ -16,7 +11,7 @@
       <select class="form-control" id="extension" name="extension">
         <option value="">-Choose-</option>
         <repeat group="{{ @extensions }}" value="{{ @extension }}">
-             <option value="{{ @extension.extension }}">
+             <option value="{{ @extension.extension }}" <check if="{{@extension.extension == @item.extension}}">selected="selected"</check>>
                {{ @extension.description }}
              </option>
         </repeat>        
@@ -29,7 +24,7 @@
       <select class="form-control" id="language" name="language">
         <option value="">-Choose-</option>
         <repeat group="{{ @languages }}" value="{{ @language }}">
-             <option value="{{ @language.language }}">
+             <option value="{{ @language.language }}"  <check if="{{@language.language == @item.language}}">selected="selected"</check>>
                {{ @language.description }}
              </option>
         </repeat>        
@@ -39,13 +34,14 @@
   <div class="form-group">
     <label class="control-label col-sm-2" for="description">Description:</label>
     <div class="col-sm-10">
-      <textarea class="form-control" id="description" name="description" value=""></textarea>
+      <textarea class="form-control" id="description" name="description">{{@item.description}}</textarea>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="code">Item Code:</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="code" name="code" value="{{@brands[0].prefix.@brands[0].new_number}}" readonly="readonly">
+    <div class="col-sm-10">      
+      <input type="text" class="form-control" id="code" name="code" value="{{@item.code}}" readonly="readonly">
+      
     </div>
   </div>
   <div class="form-group">
@@ -56,21 +52,17 @@
   </div>  
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">       
-       <input type="hidden" name="create" value="create" />
-       <input type="hidden" class="form-control" id="ncode" name="ncode" value="{{@brands[0].prefix.@brands[0].new_number}}">
-       <input type="hidden" class="form-control" id="brand_code" name="brand_code" value="{{@brands[0].code}}">  
-       <input type="hidden" class="form-control" id="brand_name" name="brand_name" value="{{@brands[0].name}}">       
-       <input type="hidden" class="form-control" id="brand_prefix" name="brand_prefix" value="{{@brands[0].prefix}}">
+       <input type="hidden" name="copy" value="copy" />
+       <input type="hidden" class="form-control" id="ncode" name="ncode" value="{{@item.ncode}}">
+       <input type="hidden" class="form-control" id="brand_code" name="brand_code" value="{{@item.brand_code}}">       
+       <input type="hidden" class="form-control" id="brand_prefix" name="brand_prefix" value="{{@item.brand_prefix}}">
        <input type="hidden" class="form-control" id="createdate" name="createdate" value="{{@date_now}}">
        <input type="hidden" class="form-control" id="updatedate" name="updatedate" value="{{@date_now}}">
 
        <input type="hidden" class="form-control" id="company" name="company" value="{{@company}}">
-       <input type="hidden" class="form-control" id="latest_number" name="latest_number" value="{{@latest_number}}">
-
-       <input type="hidden" class="form-control" id="brand_id" name="brand_id" value="{{@brands[0].id}}">
-       <input type="hidden" class="form-control" id="new_number" name="new_number" value="{{@brands[0].new_number+1}}">
+       <input type="hidden" class="form-control" id="latest_number" name="latest_number" value="{{@latest_number}}">       
        <a href="{{ @BASE.'/items' }}" class="btn btn-primary">Back To List</a>
-       <button type="submit" class="btn btn-primary pull-right">Add Item</button>
+       <button type="submit" class="btn btn-primary pull-right">Copy Item</button>
     </div>
   </div>
 </form>
