--- a/app/views/footer.htm
+++ b/app/views/footer.htm
@@ -2,96 +2,60 @@
         </div>    
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
-    <script src="../../ui/js/bootstrap-table.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>        
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.min.js"></script>  
+    <script src="../../ui/js/bootstrap-table.js"></script>
+    <script src="../../ui/js/upc.js"></script>
     <script type="text/javascript">
-        function queryParams() {
-            return {
-                type: 'owner',
-                sort: 'updated',
-                direction: 'desc',
-                per_page: 100,
-                page: 1
-            };
-        }
-    </script>
-    <script>
-        $(document).ready(function() {
-            $('#identicalForm').bootstrapValidator({
-                feedbackIcons: {
-                    valid: 'glyphicon glyphicon-ok',
-                    invalid: 'glyphicon glyphicon-remove',
-                    validating: 'glyphicon glyphicon-refresh'
-                },
-                fields: {
-                    password: {
-                        validators: {
-                            notEmpty: {
-                                message: 'The password is required'
-                            },
-                            identical: {
-                                field: 'confirmPassword',
-                                message: 'The password and its confirm are not the same'
-                            }
-                        }
-                    },
-                    confirmPassword: {
-                        validators: {
-                            identical: {
-                                field: 'password',
-                                message: 'The password and its confirm are not the same'
-                            }
-                        }
-                    }
-                }
-            });
-            $("#brand,#extension,#language").change(function() {
-              var brands = $("#brand").val().split(',');
-              var brand_id = brands[0];
-              var brand_code = brands[1];
-              var brand_prefix = brands[2]; 
-              var brand_number = brands[3];
-              var brand = brand_prefix + brand_number; 
-              var extension = $("#extension").val();              
-              var language = $("#language").val();
-              var item_number = brand + extension + language;   
-              console.log(item_number);            
-              $("#code").val(item_number);
-              $("#brand_code").val(brand_code);
-              $("#brand_prefix").val(brand_prefix);
-
-              $("#brand_id").val(brand_id);
-              $("#new_number").val(parseInt(brand_number) + 1);
-            });
-
-            if($("#item-table").length){
-              setInterval(function(){
-                if($('#page-number').length == 0){
-                  $("ul.pagination").prepend('<li><input type="text" id="page-number" /><button id="page-number-bt" class="btn btn-primary">Go</button><li>');
-                  $("#page-number-bt").click(function(){  
-                    var newPage = $('#page-number').val();  
-                    var lastPage = $('.page-last a').text();  
-                    if (/^\d+$/.test(newPage)) {
-                      $(".page-number:not('.active'):first a").text(newPage).click(); 
-                    }        
-                            
-                  });
-                }
-                
-              }, 500);
-            }           
-        });
-        function operateFormatter(value, row, index) {
-            if("{{ @role}}" != 2){
-              return [
-                    '<a href="{{ @BASE }}/item/update/', row.id ,'"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp; Edit</a>&nbsp;&nbsp;&nbsp;',
-                    '<a href="{{ @BASE}}','/item/delete/', row.id,'"><span class="glyphicon glyphicon-floppy-remove" aria-hidden="true"></span>&nbsp; Delete</a>'
-                ].join('');
-            }                
-            else {
-              return '';
-            }
-    }
-    </script>
+      	function detailFormatter(value, row, index) {
+		    if("{{ @role}}" != 2){
+		      return [
+		            '<a href="{{ @BASE }}/item/detail/', row.id ,'">', row.code ,'</a>'
+		        ].join('');
+		    }                
+		    else {
+		      return '';
+		    }
+		}
+		function editFormatter(value, row, index) {
+			if("{{ @role}}" != 2){
+			  return [
+			        '<a href="{{ @BASE }}/item/update/', row.id ,'"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>'
+			    ].join('');
+			}                
+			else {
+			  return '';
+			}
+		}
+		function copyFormatter(value, row, index) {
+		  if("{{ @role}}" != 2){
+		    return [
+		          '<a href="{{ @BASE }}/item/copy/', row.id ,'"><span class="glyphicon glyphicon-copy" aria-hidden="true"></span></a>'
+		      ].join('');
+		  }                
+		  else {
+		    return '';
+		  }
+		}
+		function upcFormatter(value, row, index) {
+		  if("{{ @role}}" != 2){
+		    return [
+		          '<a href="{{ @BASE }}/item/upccopy/', row.id ,'"><span class="glyphicon glyphicon-share" aria-hidden="true"></span></a>'
+		      ].join('');
+		  }                
+		  else {
+		    return '';
+		  }
+		}
+		function deleteFormatter(value, row, index) {
+		  if("{{ @role}}" != 2){
+		    return [                    
+		          '<a href="{{ @BASE}}','/item/delete/', row.id,'"><span class="glyphicon glyphicon-floppy-remove" aria-hidden="true"></span></a>'
+		      ].join('');
+		  }                
+		  else {
+		    return '';
+		  }
+		}
+	</script>    
 </html>
