--- a/app/views/item/detail.htm
+++ b/app/views/item/detail.htm
@@ -42,7 +42,7 @@
        <input type="hidden" name="delete" value="delete" />       
        
        <a href="{{ @BASE.'/item/update/'.@POST.id }}" class="btn btn-primary">Edit</a>&nbsp;&nbsp;
-       <a href="{{ @BASE.'/item/copy/'.@POST.id }}" class="btn btn-primary">Copy</a>&nbsp;&nbsp;
+       <a href="{{ @BASE.'/item/copy/'.@POST.id }}" class="btn btn-primary">Item Copy</a>&nbsp;&nbsp;
        <a href="{{ @BASE.'/item/upccopy/'.@POST.id }}" class="btn btn-primary">UPC Copy</a>
     </div>
   </div>
