--- a/app/views/item/list.htm
+++ b/app/views/item/list.htm
@@ -11,12 +11,15 @@
        data-url="{{ @BASE.'/items/data'}}"       
        data-side-pagination="server" 
        data-page-size="50"      
-       data-page-list="[50, 100]"       
+       data-page-list="[50, 100]"  
+       data-height="530"     
+       data-sort-name="updatedate"
+       data-sort-order="desc"
        >
     <thead>    
       <tr class="row">
             <!-- <th data-field="code"  data-sortable="true"  class="col-sm-1">Item Code</th> -->            
-            <th data-formatter="detailFormatter" class="col-sm-1">Item Code</th>
+            <th data-formatter="detailFormatter" data-sortable="true" class="col-sm-1">Item Code</th>
             <th data-field="description"  data-sortable="true" class="col-sm-3">Description</th>
             <th data-field="barcode"  data-sortable="true"  class="col-sm-1">UPC</th>         
             <th data-field="createdate"  data-sortable="true"  class="col-sm-1">Created Date</th> 
