favico and title

--- a/app/views/header.htm
+++ b/app/views/header.htm
@@ -3,7 +3,8 @@
     <head>
         <base href="{{ @BASE.'/'.@UI }}" />        
         <title>{{ @site }}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">        
         <!-- <link rel="stylesheet" href="../../ui/css/bootstrap.min.css"> -->
         <link rel="stylesheet" href="../../ui/css/bootstrap-table.css">
