--- a/app/views/item/detail.htm
+++ b/app/views/item/detail.htm
@@ -43,7 +43,8 @@
        
        <a href="{{ @BASE.'/item/update/'.@POST.id }}" class="btn btn-primary">Edit</a>&nbsp;&nbsp;
        <a href="{{ @BASE.'/item/copy/'.@POST.id }}" class="btn btn-primary">Item Copy</a>&nbsp;&nbsp;
-       <a href="{{ @BASE.'/item/upccopy/'.@POST.id }}" class="btn btn-primary">UPC Copy</a>
+       <a href="{{ @BASE.'/item/upccopy/'.@POST.id }}" class="btn btn-primary">UPC Copy</a>&nbsp;&nbsp;
+       <a href="{{ @BASE.'/item/iucopy/'.@POST.id }}" class="btn btn-primary">IU Copy</a>
     </div>
   </div>
 </form>
