--- a/app/views/item/list.htm
+++ b/app/views/item/list.htm
@@ -12,7 +12,7 @@
        data-side-pagination="server" 
        data-page-size="50"      
        data-page-list="[50, 100]"  
-       data-height="530"     
+       data-height="1000"     
        data-sort-name="updatedate"
        data-sort-order="desc"
        >
@@ -28,6 +28,7 @@
                 <th data-formatter="editFormatter" class="col-sm-1">Edit</th>
                 <th data-formatter="copyFormatter" class="col-sm-1">Item Copy</th>
                 <th data-formatter="upcFormatter" class="col-sm-1">UPC Copy</th>
+                <th data-formatter="iucopyFormatter" class="col-sm-1">IU Copy</th>
                 <th data-formatter="deleteFormatter" class="col-sm-1">Delete</th>
             </check>
         </tr>
