--- a/app/views/item/copy.htm
+++ b/app/views/item/copy.htm
@@ -41,7 +41,6 @@
     <label class="control-label col-sm-2" for="code">Item Code:</label>
     <div class="col-sm-10">      
       <input type="text" class="form-control" id="code" name="code" value="{{@item.code}}" readonly="readonly">
-      
     </div>
   </div>
   <div class="form-group">
@@ -54,15 +53,14 @@
     <div class="col-sm-offset-2 col-sm-10">       
        <input type="hidden" name="copy" value="copy" />
        <input type="hidden" class="form-control" id="ncode" name="ncode" value="{{@item.ncode}}">
-       <input type="hidden" class="form-control" id="brand_code" name="brand_code" value="{{@item.brand_code}}">       
+       <input type="hidden" class="form-control" id="brand_code" name="brand_code" value="{{@item.brand_code}}">
        <input type="hidden" class="form-control" id="brand_prefix" name="brand_prefix" value="{{@item.brand_prefix}}">
        <input type="hidden" class="form-control" id="createdate" name="createdate" value="{{@date_now}}">
        <input type="hidden" class="form-control" id="updatedate" name="updatedate" value="{{@date_now}}">
-
        <input type="hidden" class="form-control" id="company" name="company" value="{{@company}}">
        <input type="hidden" class="form-control" id="latest_number" name="latest_number" value="{{@latest_number}}">       
        <a href="{{ @BASE.'/items' }}" class="btn btn-primary">Back To List</a>
-       <button type="submit" class="btn btn-primary pull-right">Copy Item</button>
+       <button type="submit" class="btn btn-primary pull-right">Item Copy</button>
     </div>
   </div>
 </form>
