--- a/app/views/item/copy.htm
+++ b/app/views/item/copy.htm
@@ -46,7 +46,8 @@
   <div class="form-group">
     <label class="control-label col-sm-2" for="barcode">Barcode:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="barcode" name="barcode" value="{{@upc}}" readonly="readonly">
+      <input type="text" class="form-control" id="barcode" name="barcode" value="{{@upc}}" 
+      <check if="{{ @role == 1 }}"> readonly="readonly" </check>>
     </div>
   </div>  
   <div class="form-group"> 
