add frame and reader see barcode

--- a/app/views/brand/list.htm
+++ b/app/views/brand/list.htm
@@ -9,7 +9,9 @@
        data-search="true"       
        class="table table-striped" 
        data-page-size="50"      
-       data-page-list="[50, 100]">
+       data-page-list="[50, 100]"
+       data-height="1000"     
+       >
     <thead>    
     <tr class="row">
             <th data-field="code"  data-sortable="true"  class="col-sm-2">Code</th>  
