--- a/app/views/footer.htm
+++ b/app/views/footer.htm
@@ -70,5 +70,23 @@
 		    return '';
 		  }
 		}
+
+		function searchItem() {
+		    var input, filter, table, tr, td, i;
+		    input = document.getElementById("searchitem");
+		    filter = input.value.toUpperCase();
+		    table = document.getElementById("item-table");
+		    tr = table.getElementsByTagName("tr");
+		    for (i = 0; i < tr.length; i++) {
+		        td = tr[i].getElementsByTagName("td")[0];
+		         if (td) {
+		          if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+		          tr[i].style.display = "";
+		          } else {
+		          tr[i].style.display = "none";
+		       }
+		     }       
+		   }
+		}
 	</script>    
 </html>
